<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LanceIt</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_name">Nickname</string>
    <string name="login_password">Password</string>

    <string name="title_activity_register">Register</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_email">E-Mail</string>
    <string name="register_first">First Name</string>
    <string name="register_last">Last Name</string>
    <string name="register_submit">Submit</string>

    <string name="validation_error_username_shor">Podana nazwa użytkownika jest za krótka.</string>
    <string name="validation_password_security"> Twoje hasło nie spełnia wymogów bezpieczeństwa. </string>
    <string name="validation_error_first"> Imię jest niepoprawne.</string>
    <string name="validation_error_last"> Nazwisko jest niepoprawne.</string>
    <string name="validation_error_email_notvalid"> Adres Email nie jest poprawny.</string>

    <string name="validation_error_title"> Tytuł jest za krótki. </string>
    <string name="validation_error_expiration"> Musisz podać ile zlecenia ma być ważne. </string>
    <string name="validation_error_price"> Musisz podać wartość zlecenia. </string>

    <string name="title_activity_hub"> Zlecenia </string>
    <string name="title_activity_detais"> Detale </string>
    <string name="title_section_add">Dodaj zlecenie</string>
    <string name="title_section_listAll">Przeglądaj</string>
    <string name="title_section_myList">Mapa Zleceń</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_lance_submit">Confirm</string>
    <string name="add_lance_expire">Expire in (minutes)</string>
    <string name="add_lance_desc">Description</string>
    <string name="add_lance_title">Title</string>
    <string name="add_lance_price">Price (PLN)</string>

    <string name="email_1">E-mail address</string>
    <string name="Password">........</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="forgotpass">Forget password?</string>
    <string name="Newhere">New here?</string>
    <string name="SignUp">Sign Up</string>
    <string name="facebook">facebook</string>
    <string name="dailydeal">Daily Deal</string>
    <string name="new1">NEW</string>
    <string name="popular">POPULAR</string>
    <string name="endingsoon">ENDING SOON</string>
    <string name="$150">$150</string>
    <string name="$100">$100</string>
    <string name="Bought">Distance</string>
    <string name="s45">45</string>
    <string name="s52">52%</string>
    <string name="s32">32</string>
    <string name="remaining">Remaining</string>
    <string name="saving">Saving</string>
    <string name="blue_mountains">Blue Mountains Day Tour</string>
    <string name="Shangri_La">Shangri-La Hotel</string>
    <string name="australian">Australian</string>
    <string name="coupon">COUPON</string>
    <string name="code">00309898987</string>
    <string name="redeamed">REDEAMED</string>
    <string name="mypurchase">My Purchases</string>
    <string name="date">2.4.2014</string>
    <string name="$45">$45</string>
    <string name="redeemed">Redeemed</string>
    <string name="expired">Expired</string>
    <string name="fancy_a">Fancy a blue mountains trip?</string>
    <string name="purchases">Purchases</string>
    <string name="s450">$450</string>
    <string name="profile">Profile</string>
    <string name="john">John Doe</string>
    <string name="example">example@gmail.com</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="notification">Notification</string>
    <string name="passcode">Pass Code</string>
    <string name="aboutdailydeal">About Daily Deals</string>
    <string name="john1">John</string>
    <string name="john2">Doe</string>
    <string name="email_profile">Email</string>
    <string name="signout">Signout</string>
    <string name="signout_profile">Sign Out</string>
    <string name="paragraph">"The stunning Blue Mountains are a little over
an hour from Sydny and the very best way to visit our Blue Mountains Tour for the great value of only $79.Enjoy Australian natural native animals in their natural habitat, spectecular scenic lookouts,an abundance of Aboriginal history and the chanceto ride the steepest railway in the world!
Enjoy Australian natural native animals in their natural habitat,spectecular scenic lookouts."</string>
    <string name="timeleft">Time left</string>
    <string name="timeleft2">36:16:12</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_activation">Wpisz numer telefonu</string>
    <string name="activation_phone_number_prompt">Potwierdź swój numer telefonu</string>
    <string name="login_logo_desc">Logo</string>
    <string name="placeHolder">placeHolder</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="view_profile">View Profile</string>
    <string name="logout_text">Wyloguj</string>

</resources>