<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lanceit.haito.lanceit.activities.RegisterActivity">

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/register_username"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:id="@+id/register_username"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/register_password"
            android:id="@+id/register_password"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/register_email"
            android:id="@+id/register_email"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/register_first"
            android:ems="10"
            android:id="@+id/register_first"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/register_last"
            android:ems="10"
            android:id="@+id/register_last"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:hint="@string/register_Age"
            android:id="@+id/register_age"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_submit"
            android:id="@+id/register_submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />
    </LinearLayout>
</RelativeLayout>
