<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@+id/mainv" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@+id/tab_bar" android:background="@color/red_main" android:paddingTop="@dimen/pad_30dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:textSize="@dimen/txt_14sp" android:textColor="@color/white" android:id="@+id/tab1" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/new1" />
                <View android:id="@+id/view1" android:background="@null" android:layout_width="fill_parent" android:layout_height="1.5dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0">
                <Button android:textSize="@dimen/txt_14sp" android:textColor="@color/white" android:id="@+id/tab2" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/popular" />
                <View android:id="@+id/view2" android:background="@null" android:layout_width="fill_parent" android:layout_height="1.5dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0">
                <Button android:textSize="@dimen/txt_14sp" android:textColor="@color/white" android:id="@+id/tab3" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/endingsoon" />
                <View android:id="@+id/view3" android:background="@null" android:layout_width="fill_parent" android:layout_height="1.5dip" />
            </LinearLayout>
        </LinearLayout>
        <View android:background="@color/p_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <FrameLayout android:id="@+id/content_frame" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="left" android:orientation="vertical" android:id="@+id/left" android:background="@color/white" android:layout_width="280.0dip" android:layout_height="fill_parent">
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@color/red_main" android:paddingBottom="@dimen/pad_10dp" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/txt_25sp" android:textColor="@color/white" android:id="@+id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pad_20dp" android:text="@string/john" />
            <TextView android:textSize="@dimen/txt_14sp" android:textColor="@color/white" android:id="@+id/tv_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pad_20dp" android:text="@string/example" />
        </LinearLayout>
        <ListView android:id="@+id/left_drawer" android:layout_width="fill_parent" android:layout_height="0.0dip" android:divider="@null" android:choiceMode="singleChoice" android:layout_weight="3.0" />
        <View android:background="@color/side_menu_saperator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Button android:textSize="@dimen/txt_16sp" android:textColor="@color/red_main" android:gravity="center" android:id="@+id/signout" android:background="@color/white" android:padding="@dimen/pad_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signout" android:drawablePadding="@dimen/pad_10dp" style="@style/btn" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>