<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scaleType="centerCrop"
    tools:context=".loginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/loginNick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/login_name"
            android:inputType="textPersonName" />

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/loginPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/loginNick"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginPass"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/login_login" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_register" />

    </LinearLayout>


</RelativeLayout>
