<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lanceit.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/add_lance_title"
            android:inputType="text"
            android:textStyle="bold">

            <requestFocus />
        </EditText>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

        <EditText
            android:id="@+id/expire_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/add_lance_expire"
            android:inputType="number" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

        <EditText
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/add_lance_price"
            android:inputType="numberDecimal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:gravity="center" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#aaaaaa" />

        <EditText
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/add_lance_desc"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_bt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_marginLeft="89dp"
        android:background="@android:color/transparent"
        android:text="@string/add_lance_submit" />

</RelativeLayout>