<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="@dimen/pad_15dp" android:paddingBottom="@dimen/pad_15dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/top" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@drawable/popup_pic" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:background="@drawable/popup_bg" android:paddingBottom="@dimen/pad_10dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/txt_20sp" android:textColor="@color/white" android:id="@+id/tv1" android:paddingLeft="@dimen/pad_15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/blue_mountains" />
                    <TextView android:textSize="@dimen/txt_18sp" android:textColor="@color/red_main" android:id="@+id/tv2" android:paddingLeft="@dimen/pad_15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/australian" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:background="@drawable/qr_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/pad_20dp" android:layout_marginBottom="@dimen/pad_10dp">
                    <ImageView android:id="@+id/iv_qr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/pad_20dp" android:src="@drawable/qr_code_pic" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/popup_bg_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:paddingTop="@dimen/pad_10dp" android:layout_width="wrap_content" android:layout_height="fill_parent">
                    <TextView android:textSize="@dimen/txt_14sp" android:textColor="@color/coupon_color" android:id="@+id/tv3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/coupon" />
                    <TextView android:textSize="@dimen/txt_22sp" android:textStyle="bold" android:textColor="@color/red_main" android:id="@+id/tv4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/code" />
                    <TextView android:textSize="@dimen/txt_14sp" android:textColor="@color/coupon_color" android:id="@+id/tv5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/redeamed" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageButton android:id="@+id/btn_close" android:background="@null" android:padding="@dimen/pad_15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_cross" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>